--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.itemis.maven.plugins</groupId>
     <artifactId>unleash-parent</artifactId>
-    <version>2.10.1-SNAPSHOT</version>
+    <version>2.11.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>unleash-maven-plugin</artifactId>
@@ -17,146 +17,130 @@
     <maven>${version.maven}</maven>
   </prerequisites>
 
-  <properties>
-    <version.aether>1.0.2.v20150114</version.aether>
-    <version.artifact-spy-plugin>1.0.6</version.artifact-spy-plugin>
-    <version.cdi-api>1.2</version.cdi-api>
-    <version.cdi-plugin-utils>3.4.0</version.cdi-plugin-utils>
-    <version.commons-lang3>3.4</version.commons-lang3>
-    <version.guava>23.0</version.guava>
-    <version.junit>4.12</version.junit>
-    <version.junit-dataprovider>1.10.3</version.junit-dataprovider>
-    <version.maven>3.3.9</version.maven>
-    <version.maven-invoker>2.2</version.maven-invoker>
-    <version.maven-plugin-plugin>3.4</version.maven-plugin-plugin>
-    <version.mockito-all>1.10.19</version.mockito-all>
-    <version.plexus-interactivity-api>1.0-alpha-6</version.plexus-interactivity-api>
-    <version.tycho-versions-plugin>1.1.0</version.tycho-versions-plugin>
-    <version.versions-maven-plugin>2.5</version.versions-maven-plugin>
-    <version.weld-se>2.3.3.Final</version.weld-se>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>org.eclipse.aether</groupId>
       <artifactId>aether-api</artifactId>
-      <version>${version.aether}</version>
+      <version>${aether.version}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.aether</groupId>
       <artifactId>aether-connector-basic</artifactId>
-      <version>${version.aether}</version>
+      <version>${aether.version}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.aether</groupId>
       <artifactId>aether-impl</artifactId>
-      <version>${version.aether}</version>
+      <version>${aether.version}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.aether</groupId>
       <artifactId>aether-spi</artifactId>
-      <version>${version.aether}</version>
+      <version>${aether.version}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.aether</groupId>
       <artifactId>aether-transport-file</artifactId>
-      <version>${version.aether}</version>
+      <version>${aether.version}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.aether</groupId>
       <artifactId>aether-transport-http</artifactId>
-      <version>${version.aether}</version>
+      <version>${aether.version}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.aether</groupId>
       <artifactId>aether-util</artifactId>
-      <version>${version.aether}</version>
+      <version>${aether.version}</version>
     </dependency>
     <dependency>
       <!-- just to be sure that the spy plugin is available in the aether -->
       <groupId>com.itemis.maven.plugins</groupId>
       <artifactId>artifact-spy-plugin</artifactId>
-      <version>${version.artifact-spy-plugin}</version>
+      <version>${artifact-spy-plugin.version}</version>
       <type>maven-plugin</type>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>javax.enterprise</groupId>
       <artifactId>cdi-api</artifactId>
-      <version>${version.cdi-api}</version>
+      <version>${cdi-api.version}</version>
     </dependency>
     <dependency>
       <groupId>com.itemis.maven.plugins</groupId>
       <artifactId>cdi-plugin-utils</artifactId>
-      <version>${version.cdi-plugin-utils}</version>
+      <version>${cdi-plugin-utils.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>${version.commons-lang3}</version>
+      <version>${commons-lang3.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>${version.guava}</version>
+      <version>${guava.version}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>${version.junit}</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.tngtech.java</groupId>
       <artifactId>junit-dataprovider</artifactId>
-      <version>${version.junit-dataprovider}</version>
+      <version>${junit-dataprovider.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-aether-provider</artifactId>
-      <version>${version.maven}</version>
+      <version>${maven.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-artifact</artifactId>
-      <version>${version.maven}</version>
+      <version>${maven.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-core</artifactId>
-      <version>${version.maven}</version>
+      <version>${maven.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.shared</groupId>
       <artifactId>maven-invoker</artifactId>
-      <version>${version.maven-invoker}</version>
+      <version>${maven-invoker.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
-      <version>${version.maven-plugin-plugin}</version>
+      <version>${maven-plugin-plugin.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>${version.maven}</version>
+      <version>${maven.version}</version>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>${version.mockito-all}</version>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito-core.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-interactivity-api</artifactId>
-      <version>${version.plexus-interactivity-api}</version>
+      <version>${plexus-interactivity-api.version}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.tycho</groupId>
       <artifactId>tycho-versions-plugin</artifactId>
-      <version>${version.tycho-versions-plugin}</version>
+      <version>${tycho-versions-plugin.version}</version>
       <type>maven-plugin</type>
     </dependency>
     <dependency>
@@ -172,12 +156,12 @@
     <dependency>
       <groupId>org.jboss.weld.se</groupId>
       <artifactId>weld-se</artifactId>
-      <version>${version.weld-se}</version>
+      <version>${weld-se.version}</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.mojo</groupId>
       <artifactId>versions-maven-plugin</artifactId>
-      <version>${version.versions-maven-plugin}</version>
+      <version>${versions-maven-plugin.version}</version>
     </dependency>
   </dependencies>
 
@@ -186,7 +170,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
-        <version>${version.maven-plugin-plugin}</version>
+        <version>${maven-plugin-plugin.version}</version>
         <configuration>
           <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
           <goalPrefix>unleash</goalPrefix>
@@ -203,7 +187,7 @@
       <plugin>
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-component-metadata</artifactId>
-        <version>1.7.1</version>
+        <version>${plexus-component-metadata.version}</version>
         <executions>
           <execution>
             <goals>
